Fixing overflow and Icon Mobile Sizing

--- a/styles/directory-icons.css
+++ b/styles/directory-icons.css
@@ -13,6 +13,12 @@
     height: 2rem;
   }
 
+  @media (max-width: 600px) {
+    .Directory-Documents img { 
+      padding-left: 1rem;
+      padding-right: 1rem; }
+  }
+
 .Directory-Documents a span{
     font-size: 0.75rem;
     color: hsl(000, 0%, 20%);
