--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -1,18 +1,7 @@
 header {
     display: grid;
-    background-color: white;
 }
-
-header * { grid-column: start / end; }
 
 .Directory-Documents {
     float: right;
-}
-
-nav a {
-    transition: color 0.2s linear;
-}
-
-nav li :hover {
-    color: #415a77;
 }
